Microservices/K8S/platforms-np-srv.yaml
# Node-Port
apiVersion: v1
kind: Service
metadata:
  name: platforms-np-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 8080
# kubectl apply -f platforms-np-srv.yaml
# kubectl get services
# 80:32173/TCP
