Microservices/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /api/platform
            pathType: Prefix
            backend:
              service:
                name: platforms-clusterip-srv
                port:
                  number: 80
          - path: /api/c/platform
            pathType: Prefix
            backend:
              service:
                name: commands-clusterip-srv
                port:
                  number: 80
# damit der test.com funktioniert, muss die hosts Datei angepasst werden
# die liegt unter C:\Windows\System32\drivers\etc\hosts
# ist wie ein simpler DNS Eintrag aber halt lokal
# hinzufügen:   127.0.0.1 test.com

# localhost sollte nicht beeinträchtigt werden

# kubectl apply -f ingress-srv.yaml
